# fast-api-pydantic-bug

./: README.md  pyproject.toml
src/: __init__.py  user.py
